[metadata]
# This includes the license file in the wheel.
license_file = LICENSE

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support. Removing this line (or setting universal to 0) will prevent
# bdist_wheel from trying to make a universal wheel. For more see:
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
universal=0

[coverage:run]
branch = True
data_file = .coverage
source = .
omit =
	*/site-packages/*
	*__init__*
	*tests*
	unravel/_version.py
	setup.py

[coverage:html]
directory = coverage_report
title = Unravel coverage report

[coverage:report]
omit =
	*/site-packages/*
	*__init__*
	*tests*
	unravel/_version.py
	setup.py
fail_under = 85
show_missing = True

[check-manifest]
ignore =
    .bumpversion.cfg
	tests
	tests/*
